--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Read more: https://developer.mozilla.org/en-US/docs/Web/Security/Secure_Contexts
 //# sourceMappingURL=flutter.js.map
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="https://vuongnam1009.github.io/flutter.js" ></script>
 </head>
 <body>
   <script>
